@@ -10,6 +10,7 @@ EXPORTS
 	ZERO
 	CONVERT_FLOATS
 	IIUOPENPRINT
+	IRDREDBINEDGE
 	QSEEK
 	CONVERT_LONGS
 	IRDPAS
@@ -19,6 +20,7 @@ EXPORTS
 	CINTERP
 	IRDSEC
 	QWRITE
+	IRDREDSIZESFORLOAD
 	QREAD
 	QOPEN
 	ISETDN
